[package]
name = "watchy-scom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.0"
eframe ="0.27.0"
egui_extras = { version = "0.27.0", features = ["default", "image"] }
log = "0.4"
env_logger = "0.10"
serialport = "4.3.0"
image = "0.25.0"
regex = "1.10.4"
message-io = { version = "0.17", default-features = false, features = ["tcp", "websocket", "tungstenite", "socket2"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"