[package]
name = "ws-serial-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
env_logger = "0.10"
log = "0.4.20"

# Network
message-io = { version = "0.17", default-features = false, features = ["tcp", "websocket", "tungstenite", "socket2"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"

# Arguments
clap = { version = "4.2.1", features = ["derive"] }
serialport = "4.3.0"
image = "0.25.0"